2006-01-10  Johan Dahlin  <jdahlin@async.com.br>

	* examples/list/searchbar.py: New example

	* kiwi/ui/widgets/list.py (List.add_list): 
	Be a bit smarter when cleaning the list, instead of removing
	all items, check if they're inserted first.
	Refactor remove and remove type sniffing.
	(Column.__init__): Set data_type to string as default.

2006-01-09  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_datatypes.py: Check if the locale is present before
	running the tests. Fixes #2377

2006-01-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/tasklet.py: Add a decorator, patch by Gustavo.
	Fixes 2368
	
2006-01-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (_BaseDateTimeConverter.get_lang_constant): 
	Move lang_constant from being a class variable to an accessor
	since its undefined on win32. Fixes #2358

2005-12-16  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py (Library, Library.__init__): improve doc string

=== kiwi 1.9.3 ===
2005-12-15  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Added
	* kiwi/__version__.py: Bump
	
2005-12-15  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py: Subclass propertyobject.

2005-12-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (SummaryLabel.update_total): Use 
	get_attribute and always convert to float.

	* kiwi/ui/views.py (SlaveView): Add simple notebook 
	validation support. It'll mark the text of the labels
	red if there are any widgets inside which are mandatory
	or invalid. Fixes bug 2286.

2005-12-14  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/hyperlink/hyperlink_demo.py:
	* kiwi/ui/hyperlink.py:

2005-12-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/delegates.py (SlaveDelegate.__init__) 
	(Delegate.__init__): API Change,
	move keyactions to the end of the list, to be as compatible
	as possible with the parent klasses.

	* kiwi/ui/delegates.py:
	* kiwi/ui/views.py:
	Cleanups: